<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dedede"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_get_start_timitory"
        android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/txtMain1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtAwal"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="#202020"
        android:layout_centerInParent="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtSubtextAwal"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="#202020"
        android:layout_below="@+id/txtMain1"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#f8f8f8"

        >
    <Button
        android:id="@+id/btnMulai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtMulai"
        android:textSize="18sp"
        android:onClick="pindahKode"
        android:gravity="center"
        android:textColor="#202020"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAllCaps="false"
        android:background="@drawable/rectangle_button_yellow"
        />
    </RelativeLayout>


</RelativeLayout>